--- a/dwpboot/pom.xml
+++ b/dwpboot/pom.xml
@@ -24,31 +24,12 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<hibernate.version>4.2.8.Final</hibernate.version>
+		<bootcore.version>0.0.2-SNAPSHOT</bootcore.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-data-jpa</artifactId>
-</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+	
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
 <dependency>
     <groupId>io.springfox</groupId>
     <artifactId>springfox-swagger-ui</artifactId>
@@ -80,7 +61,57 @@
 
 		
 		
+
+	
 		<dependency>
+	<groupId>com.prat.ewh</groupId>
+	<artifactId>ewhbootcore</artifactId>
+	<version>${bootcore.version}</version>	 
+	<!-- <version>0.0.1-SNAPSHOT</version>	 -->
+	</dependency>
+	
+	<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.2.10.Final</version>
+</dependency>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
+	
+	
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		
+		<dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+		
+		
+			<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-data-jpa</artifactId>
      <exclusions>
@@ -94,12 +125,6 @@
         </exclusion>
     </exclusions>
 </dependency>
-<dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-core</artifactId>
-    <version>5.2.10.Final</version>
-</dependency>
-		
 		
 		
 		<!-- For Database -->
@@ -130,12 +155,18 @@
   <scope>compile</scope>
 </dependency> -->
 
+
+
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-<dependency>
+<!--  <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
     <version>5.1.6</version>
 </dependency>
+-->
+
+
+
 
 <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
 <!-- <dependency>
@@ -148,7 +179,45 @@
 	</dependencies>
 
 	<build>
+	<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
+		
+		<plugin>
+    <groupId>io.swagger.codegen.v3</groupId>
+    <artifactId>swagger-codegen-maven-plugin</artifactId>
+   
+    <executions>
+        <execution>
+            <goals>
+                <goal>generate</goal>
+            </goals>
+            <configuration>
+                <inputSpec>${basedir}/src/main/resources/swagger/subject.yaml</inputSpec>
+                <language>java</language>
+                
+                <configOptions>
+                <searializableModel>true</searializableModel>
+                <useBeanValidation>true</useBeanValidation>  
+                     <dateLibrary>java</dateLibrary>  
+                     <sourceFolder>swagger</sourceFolder>                   
+                </configOptions>
+                
+                  <library>jersey2</library>
+                <output>target/generated-sources</output>
+                <modelPackage>com.ewh.shop.customer</modelPackage>               
+                <generateSupportingFiles>false</generateSupportingFiles>
+                <generateApiDocumentation>false</generateApiDocumentation>
+                <generateApis>false</generateApis>
+                <generateApiTests>false</generateApiTests>
+                <generateModelDocumentation>false</generateModelDocumentation>
+                <generateModelTests>false</generateModelTests>
+                <generateModels>false</generateModels>
+              
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
